# dystruct

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  README  README.md  align.c  align.h  config.h  config.h.in  config.h.in~  config.status  configure.ac  dstru.c  dstru_funcs.h  dstru_test.c  dstru_test_funcs.h  dstru_test_types.h  dstru_types.h  dstru_util.c  index.html  libdystruct.la  libtool  params.json  test  test.c
.deps/: align.Plo  test.Po
.libs/: libdystruct.0.dylib  libdystruct.dylib  libdystruct.la  libdystruct.lai
config/: config.h  config.h.in
include/: Makefile.am
scripts/: dev-al.sh
src/: Makefile.am  dstru.c  dstru_defines.h  dstru_funcs.h  dstru_types.h  dstru_util.c  dstru_util_funcs.h
test/: Makefile.am  dstru_test  dstru_test.c  dstru_test_funcs.h  dstru_test_types.h
test.dSYM/Contents/Resources/DWARF/: test
