noinst_LTLIBRARIES = libdstrutest.a
libdstrutest_a_SOURCES = dstru.c dstru_util.c
libdstrutest_a_CPPFLAGS = -I$(top_srcdir)/config -I$(top_srcdir)/include

lib_LTLIBRARIES = libdstru.la
libdstru_la_SOURCES = dstru.c dstru_util.c
libdstru_la_CPPFLAGS = -I $(top_srcdir)/config -I$(top_srcdir)/include
